# legal-learn

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Taskfile.yml
docs/rationale/: 0001_architecture.md  0002_burn_and_algorithms.md
src/: data.rs  dataset.rs  distill.rs  eval.rs  loss.rs  main.rs  model.rs  tokenize.rs  training.rs
