[package]
name = "legal-learn"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1.0"
burn = { version = "0.20", features = ["train", "ndarray", "wgpu"] }
burn-dataset = "0.20"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.6", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite-vec = "0.1.9"
tokenizers = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
