[package]
name = "legal-learn"
version = "0.1.3"
edition = "2024"
rust-version = "1.95"

[dependencies]
anyhow = "1.0.102"
burn = { version = "0.21.0", features = ["train", "ndarray", "wgpu"] }
burn-dataset = "0.21.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
# Pinned to 0.37 because burn-dataset 0.21 depends on rusqlite 0.37 via r2d2_sqlite/serde_rusqlite.
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlite-vec = "0.1.9"
tokenizers = "0.23.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
